Fixed the grid gap

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -116,6 +116,7 @@ footer {
   box-sizing: border-box;
   padding: 24px 24px 48px;
   margin: 0 auto;
+  grid-gap: 24px 8px;
 
   a {
     text-decoration: none;
